--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -45,6 +45,15 @@ nav {
   margin: 0px auto 0px auto;
 }
 
+.article--date {
+  font-weight: 400;
+  font-size: 1.2rem; /*1.9375rem */
+  font-style: italic;
+  line-height: 2.25rem; 
+  margin: 0px auto 0px auto;
+}
+
+
 .article--body{
   padding: 20px;
   font-size: 18px;
